Fix window overflow in Firefox
`flex-basis` default to `auto` behaves differently as chrome. override default for correct calculation.

--- a/public/chat.css
+++ b/public/chat.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .flex-1 {
-  flex: 1;
+  flex: 1 1 0;
 }
 
 .flex-2 {
